# a3p

./: .env.example  .gitignore  .vercelignore  2026-03-22-185305-httpsgithubcomqianghannaap-1-check-this-rep.txt  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  HANDOFF.md  cashflow-plan.html  ecosystem.config.cjs  package-lock.json  package.json  review-pluginQA.md  student-plugins.html  student.html  tsconfig.base.json  vercel.json
agentbook/: PRODUCTION-ENV.md  activate-addon-pricing.ts  activate-ca4-cad-pricing.ts  activate-core-plan-pricing.ts  agentbook.md  agentbookmvpskill.md  close-expense-gaps.md  phase11-competitive-analysis.md  post-p7-plan.md  seed-billing-plans.ts  seed-expense-categories.sql  seed-personas.ts  seed-plugin-defaults.sql  seed-telegram-bot.sql  seed-users.ts  setup-stripe-plaid-sandbox.md  start-telegram.sh  (+4 more)
containers/livepeer-inference-adapter/: Dockerfile  docker-compose.test.yaml  pyproject.toml
containers/livepeer-inference-adapter/src/livepeer_adapter/: __init__.py  config.py  health.py  main.py  proxy.py  registrar.py
containers/livepeer-inference-adapter/tests/: conftest.py  test_config.py  test_health.py  test_proxy.py  test_registrar.py
containers/livepeer-serverless-proxy/: Dockerfile  pyproject.toml
containers/livepeer-serverless-proxy/src/serverless_proxy/: config.py  main.py  server.py
containers/livepeer-serverless-proxy/src/serverless_proxy/providers/: base.py  custom.py  fal_ai.py  gemini.py  replicate.py  runpod.py
containers/livepeer-serverless-proxy/tests/: conftest.py  test_config.py  test_providers.py  test_server.py
(+1901 files in other folders)
