[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livepeer-inference-adapter"
version = "0.1.0"
description = "Lightweight sidecar that bridges any HTTP inference backend to a Livepeer BYOC orchestrator"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/livepeer_adapter"]

[tool.coverage.report]
fail_under = 85
